feat: evolve expense tracker into portfolio project